<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_plaque">plaque</string>
    <string name="menu_entretien">entretien</string>
    <!-- les composant de plauqe page -->
    <string name="btCalculer">Calculer</string>
    <string name="poids_total">Poids total</string>
    <string name="kw">Kw</string>
    <string name="gazCarbon">Co2</string>
    <string name="menu_assurance">assurance</string>
    <string name="menu_CoutsT">Cout Total</string>
    <string name="menu_carburant">carburant</string>
    <string name="vdicon">vdicon</string>
    <!-- se termine les composant de plauqe page -->
</resources>