<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_plaque"
        android:name="com.example.myapplication.ui.plaque.PlaqueFragment"
        android:label="@string/menu_plaque"
        tools:layout="@layout/fragment_plaque" />

    <fragment
        android:id="@+id/nav_entretien"
        android:name="com.example.myapplication.ui.entertien.EntertienFragment"
        android:label="@string/menu_entretien"
        tools:layout="@layout/fragment_entertien" />

    <fragment
        android:id="@+id/nav_totalcosts"
        android:name="com.example.myapplication.ui.coutst.CoutstFragment"
        android:label="@string/menu_CoutsT"
        tools:layout="@layout/fragment_totalcosts" />
    <fragment
        android:id="@+id/nav_assurance"
        android:name="com.example.myapplication.ui.assurance.AssuranceFragment"
        android:label="AssuranceFragment" />
    <fragment
        android:id="@+id/nav_carburant"
        android:name="com.example.myapplication.ui.carburant.CarburantFragment"
        android:label="CarburantFragment" />

</navigation>